--- a/app/index.html
+++ b/app/index.html
@@ -123,7 +123,7 @@
 
 <!-- Anglar App Script -->
 
-
+<script src="services/conduit/conduit.js"></script>
 <!-- Security -->
 
 <script src="components/security/http-auth-interceptor.js"></script>
